# gemini-inference-framework

./: .env.template  .gitattributes  .gitignore  AGENTS.md  README.md  compare_benchmarks.py  measure_concurrency_fase2.py  prompts.py  pyproject.toml  salvage.py
benchmark_results/: BENCHMARK_RESULTS.md  salvaged_results.json
dashboard/: app.js  index.css  index.html
strategies/: output_validation.py  providers.py  stage_assembly.py  utils.py
strategies/cascade/: runner.py
strategies/lazy_optimized/: runner.py
strategies/monolithic/: runner.py
strategies/optimized_monolithic/: runner.py
strategies/pipeline/: runner.py
strategies/pro_model/: runner.py
strategies/thinking_budget/: runner.py
tests/: test_concurrency.py  test_output_validation.py  test_runner_error_handling.py
